--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ section{
 header{
     width: 100%;
     min-height: 100vh;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.671),rgba(0, 0, 0, 0.637)),url("/images/header.jpg");
+    background-image:linear-gradient(rgba(0, 0, 0, 0.671),rgba(0, 0, 0, 0.637)),url("images/header.jpg");
     background-position: center;
     position: relative;
     background-size: cover;
